<?xml version="1.0"?>
<package format="2">
  <name>system_bringup</name>
  <version>0.0.0</version>
  <description>The system_bringup package</description>
  <maintainer email="shaw@bedestrian.com">Shaw</maintainer>
  <license>BSD</license>
  <author email="shaw@bedestrian.com">Shaw</author>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
